Command-line --help output misformatted
Categories
(Core :: Widget: Gtk, defect)
Tracking
()
People
(Reporter: psychonaut, Assigned: mkmelin)
References
Details
Attachments
(1 file)
|
48 bytes,
text/x-phabricator-request
|
ryanvm
:
approval-mozilla-beta+
ryanvm
:
approval-mozilla-esr128+
|
Details | Review |
Invoking Thunderbird with the --help command-line option results in some misformatted lines. Here's an excerpt showing the problem:
--headless Run without a GUI.
--dbus-service <launcher> Run as DBus service for org.freedesktop.Application and
set a launcher (usually /usr/bin/appname script) for it. -compose [ <options> ] Compose a mail or news message. Options are specified
as string "option='value,...',option=value,..." and
include: from, to, cc, bcc, newsgroups, subject, body,
message (file), attachment (file), format (html | text).
Example: "to=john@example.com,subject='Dinner tonight?'"
--jsconsole Open the Browser Console.
In particular, the -compose option should start on a new line, not in the same paragraph as --dbus-service. It probably also needs to be moved to the very end of the list of options, along with the other "short" options that start with a single hyphen rather than a double hyphen (-mail, -file, etc.).
| Assignee | ||
Comment 1•1 year ago
|
||
Right, the --dbus-service is missing a newline
| Assignee | ||
Comment 2•1 year ago
|
||
| Assignee | ||
Updated•1 year ago
|
| Assignee | ||
Comment 5•1 year ago
|
||
Comment on attachment 9461619 [details]
Bug 1943650 - Command-line --help output misformatted after --dbus-service. r=emilio
ESR Uplift Approval Request
- If this is not a sec:{high,crit} bug, please state case for ESR consideration: Malformed command line output for --help
- User impact if declined: Malformed command line output --help
- Fix Landed on Version: 128
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Very safe, just an added \n
Beta/Release Uplift Approval Request
- User impact if declined/Reason for urgency: Malformed command line output --help
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Very safe, just an added \n
- String changes made/needed: none
- Is Android affected?: No
Comment 6•1 year ago
|
||
Comment on attachment 9461619 [details]
Bug 1943650 - Command-line --help output misformatted after --dbus-service. r=emilio
Approved for 135.0rc1 and 128.7esr.
Updated•1 year ago
|
Description
•