Bug 1943650 - Command-line --help output misformatted after --dbus-service. r=emilio, a=RyanVM DONTBUILD